<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/SmartCities">

    <TextView android:text="@string/GPS_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GPSText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextLat"
        android:layout_below="@+id/GPSText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/Lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextLon"
        android:layout_below="@+id/TextLat"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextSpeed"
        android:layout_below="@+id/TextLon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/Accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextAccuracy"
        android:layout_below="@+id/TextSpeed"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextHeading"
        android:layout_below="@+id/TextAccuracy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start GPS and Save data"
        android:id="@+id/GPSButton"
        android:layout_below="@+id/TextHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/TextHeading"
        android:layout_alignEnd="@+id/TextHeading" />

    <Button
        android:text="Maps (Lab 3)"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/dataDisplay"
        android:layout_width="363dp"
        android:layout_height="380dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp" />


</RelativeLayout>
